[package]
name = "tp3_arena_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
rand = "0.8"
